--- a/css/app.css
+++ b/css/app.css
@@ -11,6 +11,9 @@ body{margin:0;font-size:16px}
 body{
 	background: #F4F4F4;
 }
+img{
+  max-width: 100%;
+}
 .bg-white{
 	background-color: #fff;
 }
@@ -2069,6 +2072,23 @@ textarea.form-control{
 	min-height: 100px;
 }
 
+.form-group-inline{
+  display: inline-block;
+}
+
+.inline-form .form-group-inline + .form-group-inline{
+  margin-left: 15px;
+}
+
+.inline-text label{
+  display: inline-block;
+  margin-right: 15px;
+}
+
+.inline-text input, .inline-text textaria{
+  display: inline-block;
+}
+
 /*******************************/
 /************** FORMS END***********/
 /*******************************/
@@ -2083,7 +2103,7 @@ textarea.form-control{
 .primary-links .drop-icon:after{
   content: '';
   display: inline-block;
-  width: 8px; height: 8px;
+  width: 7px; height: 7px;
   right: 4px; top: 50%;
   transform: translateY(-50%) rotate(-45deg);
   z-index: 100; position: absolute;
@@ -2118,3 +2138,81 @@ textarea.form-control{
   display: block;
 }
 
+/**** popup model *****/
+
+.popup-model{
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  opacity: 0;
+  z-index: -1;
+  transition: all 260ms ease-in-out 150ms;
+}
+.cloud-bg{
+  display: inline-block;
+  position: absolute;
+  left:0; top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.3);
+}
+.popup-model.open, .popup-model.open .popup{
+  opacity: 1;
+  visibility: visible;
+  z-index: 9999;
+}
+.popup-model.open{
+  transition: all 260ms ease-in-out 0;
+}
+.popup-model.open .popup{
+  z-index: 10000;
+  transform: translate(-50%, -50%) scale(1);
+  transition: all 260ms ease-in-out 100ms;
+}
+.popup{
+  position: absolute; 
+  left: 50%; top: 50%;
+  transform: translate(-50%, -50%) scale(0.5);
+  background: #fff;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 260ms ease-in-out 0ms;
+}
+
+.popup-md{
+  width: 1100%;
+  min-height: 200px;
+  padding: 15px;
+  border-radius: 4px;
+}
+.model-close{
+  position: absolute;
+  display: inline-block;
+  width: 14px; height: 14px;
+  top: 8px; right: 8px;
+  cursor: pointer;
+}
+.model-close:before, .model-close:after{
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 2px;
+  background-color: #333;
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%, -50%);
+}
+.model-close:before{
+  transform:translate(-50%, -50%) rotate(-45deg)
+}
+.model-close:after{
+  transform:translate(-50%, -50%) rotate(45deg)
+}
+@media (min-width: 768px){
+  .popup-md{
+    width: 700px;
+    min-height: 200px;
+  }
+}
